index.html mvt configuring ongoing

--- a/templates/index.html
+++ b/templates/index.html
@@ -1837,7 +1837,7 @@
             <div class="logo-container">
                 <div class="logo-icon"></div>
                 <div class="logo-text">
-                    <span class="brand-name">PowerPro Electrical</span>
+                    <span class="brand-name">{{title}}</span>
                     <span class="tagline">Professional Electrical Solutions</span>
                 </div>
             </div>
