--- a/templates/index.html
+++ b/templates/index.html
@@ -1838,7 +1838,7 @@
                 <div class="logo-icon"></div>
                 <div class="logo-text">
                     <span class="brand-name">{{title}}</span>
-                    <span class="tagline">Professional Electrical Solutions</span>
+                    <span class="tagline">{{tagLine}}</span>
                 </div>
             </div>
             
@@ -1858,7 +1858,7 @@
                     <li>
                         <a href="tel:+15551234567" class="emergency-badge">
                             <i class="fas fa-phone-alt"></i>
-                            Emergency: (555) 123-4567
+                            {{contact}}
                         </a>
                     </li>
                 </ul>
